# FinalProjectGraphics

./: .gitignore  CMakeLists.txt  FinalGameTechnologyReport.txt  FinalGraphicsReport.txt  GameTechFinal.docx  GraphicsFinal.docx  Project4ProgressReport.txt  README.md  screenshot
cmake/: assimp.cmake
screenshots/: Capture_03-12-2018::09:39:19  Capture_03-12-2018::10:20:18
src/: CMakeLists.txt  bone_geometry.cc  bone_geometry.h  camera.cc  camera.h  controller.cc  controller.h  debuggl.cc  debuggl.h  filesystem.h  floor.cc  floor.h  gui.cc  gui.h  jpegio.cc  jpegio.h  lights.cc  lights.h  loader.cc  loader.h  main.cc  material.h  menger.cc  menger.h  mesh.h  model.h  object.cc  object.h  objloader.cc  objloader.h  picker.h  portable_gl.h  procedure_geometry.cc  procedure_geometry.h  render_pass.cc  render_pass.h  saver.cc  saver.h  shader.cc  shader.h
src/assets/: CMakeLists.txt  Resources.txt  nanosuit.fbx  untitled.mtl
src/assets/buildings/flatiron/: 13943_Flatiron_Building_v1_l1.mtl
src/shaders/: CMakeLists.txt  blue.frag  cylinder.vert  default.frag  default.vert  floor.frag  lensflare.frag  object.frag  picker.frag  picker.vert  red.frag  screen_blur.frag  screen_blur2.frag  screen_brightness.frag  screen_default.frag  screen_default.vert  screen_downsample.frag  screen_effects.frag  screen_hdr.frag  screen_lensflare.frag  skeleton.vert
